Changes .gitignore - excess router removed _boilerplate.scss - path fixed, scrollbar settings added combobox.tsx - minor changes date-picker.tsx - red added form-combobox.stories.tsx - minor changes form-combobox.tsx - minor changes index.ts - minor changes index.ts - minor changes index.ts - minor changes index.ts - minor changes OutlineBell.tsx - minor changes Red-Close.svg - added to particular folder three-dots-spinner.tsx - minor changes

--- a/src/styles/_boilerplate.scss
+++ b/src/styles/_boilerplate.scss
@@ -1,7 +1,14 @@
 @layer utilities {
   .cursor-red-close {
     cursor:
-      url('/src/assets/components/Red-Close.svg') 12 12,
+      url('/src/assets/svg/Red-Close.svg') 12 12,
       not-allowed !important;
+  }
+  .custom-scrollbar::-webkit-scrollbar {
+    background-color: var(--color-dark-500);
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: var(--color-dark-100);
   }
 }
